# Visual_Odometry

./: CMakeLists.txt  README.md  package.xml
config/: camera_intrinsic.yaml  camera_parameters.yaml  rapallo_intrinsic.yaml
include/visual_odometry/: camera_utility.hpp  functions.hpp  math_utility.hpp
launch/: cilindro.launch  parete.launch  rapallo.launch  rapallo1.launch  rapallo2.launch  show_img.launch  show_video.launch  visual_Odometry.launch
msg/: fail_check.msg  vo_results.msg
rviz/: world_points.rviz
src/: opencv_test.cpp  show_image.cpp  show_video.cpp  visual_Odometry.cpp
